wordpress-ingress-2.yaml
apiVersion: networking.k8s.io/v1 # versão do Kubernetes necessária p/ criar objetos do tipo Ingress
kind: Ingress
metadata: # informações que ajudam a identificar de forma única o objeto (por exemplo: name & UID)
  name: wordpress
  namespace: labwordpress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules: # configurações do ingress
  - host: labwordpress.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: # refere-se a um serviço que será usado como backend
            name: wordpress
            port:
              number: 80
